Update log page

--- a/src/main/webapp/partials/logs.html
+++ b/src/main/webapp/partials/logs.html
@@ -1,7 +1,11 @@
 <div class="container">
 	<div class="col-md-8 col-md-offset-1">
 	    <h2>Logs</h2>
-		<div ng-init="viewLog()" id="log">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-1" ng-init="displayLog('/logservlet')" id="log">
+				
+			</div>
 		</div>
+		<br/>
 	</div>
 </div>
