--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="intro-message">
-                <h1>Simulation Test</h1>
+                <h1>Simulation Exercise</h1>
 
-                <h3>Angelo Postiglione</h3>
+                <h3>Angelo Postiglione - July 2015</h3>
                 <hr class="intro-divider">
             </div>
         </div>
